--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -131,8 +131,7 @@
   [events]="events"
   [hourSegmentTemplate]="weekViewHourSegmentTemplate"
   [viewDate]="viewDate"
-  [eventSnapSize]="0"
-  [snapDraggedEvents]="false"
+  [hourSegments]="4"
   [weekStartsOn]="weekStartsOn"
 >
 </mwl-calendar-week-view>
