--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,5 +1,9 @@
 <div class="row">
 
+  <div *ngIf="error">
+    {{error}}
+  </div>
+
   <div *ngIf="isLoading; else appointmentsCard">
     <mat-progress-spinner mode="indeterminate">
     </mat-progress-spinner>
@@ -11,7 +15,7 @@
 
         <mat-form-field>
           <mat-label>Name</mat-label>
-          <input matInput placeholder="Your name" [(ngModel)]="name" (ngModelChange)="updateNameOfEvent()">
+          <input (ngModelChange)="updateNameOfEvent()" [(ngModel)]="name" matInput placeholder="Your name">
           <mat-hint>At least 6 characters</mat-hint>
         </mat-form-field>
 
@@ -26,8 +30,8 @@
         </mat-form-field>
 
         <div>
-          <button mat-button [disabled]="!canBook()" (click)="bookAppointment()">Book</button>
-          <button mat-button (click)="loadData()">Refresh</button>
+          <button (click)="bookAppointment()" [disabled]="!canBook()" mat-button>Book</button>
+          <button (click)="loadData()" mat-button>Refresh</button>
         </div>
 
       </div>
@@ -95,6 +99,7 @@
         </ng-template>
 
         <mwl-calendar-day-view
+          [currentTimeMarkerTemplate]="marker"
           [dayEndHour]="getEndHour()"
           [dayEndMinute]="getEndMinute()"
           [dayStartHour]="getStartHour()"
@@ -103,7 +108,6 @@
           [hourSegmentTemplate]="dayViewHourSegmentTemplate"
           [hourSegments]="4"
           [viewDate]="viewDate"
-          [currentTimeMarkerTemplate]="marker"
         >
         </mwl-calendar-day-view>
 
