--- a/src/app/experts/experts.component.html
+++ b/src/app/experts/experts.component.html
@@ -1,13 +1,16 @@
-<div *ngIf="isLoading">
-  <mat-progress-spinner mode="indeterminate">
-  </mat-progress-spinner>
-</div>
+<div class="container">
+  <div fxLayout="row" fxLayoutAlign="center center">
+    <div *ngIf="isLoading">
+      <mat-progress-spinner mode="indeterminate">
+      </mat-progress-spinner>
+    </div>
 
-<mat-grid-list cols="4">
-  <mat-grid-tile
-    *ngFor="let expert of experts"
-    [colspan]="2"
-    [rowspan]="1">
-    <app-expert-digest [expert]="expert"></app-expert-digest>
-  </mat-grid-tile>
-</mat-grid-list>
+    <mat-grid-list  cols="6" fxFill gutterSize="50px">
+      <mat-grid-tile
+        *ngFor="let expert of experts"
+        [rowspan]="1">
+        <app-expert-digest [expert]="expert"></app-expert-digest>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
+</div>
