--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
-<div class="flexbox-parent">
+<!--<div class="flexbox-parent">-->
 <!--  layout="row" -->
-  <div  layout-align="center center" style="min-height: 500px">
+<!--  <div  layout-align="center center" style="min-height: 500px">-->
     <router-outlet></router-outlet>
-  </div>
-</div>
+<!--  </div>-->
+<!--</div>-->
