--- a/src/app/experts/experts.component.html
+++ b/src/app/experts/experts.component.html
@@ -5,7 +5,7 @@
       </mat-progress-spinner>
     </div>
 
-    <mat-grid-list  cols="6" fxFill gutterSize="50px">
+    <mat-grid-list cols="6" fxFill>
       <mat-grid-tile
         *ngFor="let expert of experts"
         [rowspan]="1">
