--- a/src/app/components/expert-digest/expert-digest.component.html
+++ b/src/app/components/expert-digest/expert-digest.component.html
@@ -1,13 +1,14 @@
 <mat-card class="example-card">
-  <mat-card-header>
-    <div class="example-header-image" mat-card-avatar></div>
-    <mat-card-title>{{expert.name}}</mat-card-title>
+  <mat-card-header class="card-header">
+    <mat-card-title>
+      <h3 class="m-0">{{expert.name}}</h3>
+    </mat-card-title>
     <mat-card-subtitle>{{expert.job_title}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content class="card-content">
     {{expert.country_name}}
   </mat-card-content>
-  <mat-card-actions>
+  <mat-card-actions class="card-actions">
     <a [routerLink]="['/experts', expert.id]">
       <button mat-button>More info</button>
     </a>
