--- a/src/app/screens/expert/expert.component.scss
+++ b/src/app/screens/expert/expert.component.scss
@@ -1,3 +1,8 @@
-.container {
-  margin: 100px !important;
+.example-card {
+  min-width: 200px;
+}
+
+.card-header, .card-content, .card-actions {
+  justify-content: center !important;
+  text-align: center !important;
 }
