--- a/src/app/screens/expert/expert.component.html
+++ b/src/app/screens/expert/expert.component.html
@@ -1,38 +1,36 @@
-<div class="container">
-  <div fxLayout fxLayoutAlign="center center">
-    <div style="margin: auto;">
+<div class="container" fxFlex fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5%">
 
-      <div fxLayout="row">
-        <a routerLink="/experts" class="navigator">Back to experts</a>
-      </div>
-
-
-      <div *ngIf="isLoading; else expertCard">
-        <mat-progress-spinner mode="indeterminate">
-        </mat-progress-spinner>
-      </div>
-
-
-      <ng-template #expertCard>
-
-        <mat-card class="example-card">
-          <mat-card-header>
-            <div class="example-header-image" mat-card-avatar></div>
-            <mat-card-title>{{expert.name}}</mat-card-title>
-            <mat-card-subtitle>{{expert.job_title}}</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content class="card-content">
-            {{expert.country_name}}
-            <br>
-            {{expert.working_hours.starts_at}} -> {{expert.working_hours.ends_at}}
-          </mat-card-content>
-          <mat-card-actions>
-            <a [routerLink]="['/book', expert.id]">
-              <button mat-button>Book Now!</button>
-            </a>
-          </mat-card-actions>
-        </mat-card>
-      </ng-template>
-    </div>
+  <div fxFlex="25" fxFlexOffset="1%">
+    <a class="navigator" routerLink="/experts">Back to experts</a>
   </div>
+
+
+  <div fxFlex="75" fxLayout="row">
+    <div *ngIf="isLoading; else expertCard">
+      <mat-progress-spinner mode="indeterminate">
+      </mat-progress-spinner>
+    </div>
+
+
+    <ng-template #expertCard>
+
+      <mat-card class="example-card">
+        <mat-card-header class="card-header">
+          <mat-card-title>{{expert.name}}</mat-card-title>
+          <mat-card-subtitle>{{expert.job_title}}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content class="card-content">
+          {{expert.country_name}}
+          <br>
+          {{expert.working_hours.starts_at}} -> {{expert.working_hours.ends_at}}
+        </mat-card-content>
+        <mat-card-actions class="card-actions">
+          <a [routerLink]="['/book', expert.id]">
+            <button mat-button>Book Now!</button>
+          </a>
+        </mat-card-actions>
+      </mat-card>
+    </ng-template>
+  </div>
+
 </div>
