--- a/src/app/screens/expert/expert.component.html
+++ b/src/app/screens/expert/expert.component.html
@@ -1,7 +1,14 @@
 <div class="container" fxFlex fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5%">
 
   <div fxFlex="25" fxFlexOffset="1%">
-    <a class="navigator" routerLink="/experts">Back to experts</a>
+    <div fxFlex="20">
+      <a routerLink="/experts">
+        <button mat-button>
+          <mat-icon>arrow_back</mat-icon>
+          Back to experts
+        </button>
+      </a>
+    </div>
   </div>
 
 
