--- a/src/app/screens/book/book.component.html
+++ b/src/app/screens/book/book.component.html
@@ -38,7 +38,7 @@
             </mat-select>
           </mat-form-field>
 
-          <div *ngIf="dragToSelectEvent">
+          <div *ngIf="selectedAppointment">
 
           </div>
 
