--- a/src/app/screens/expert/expert.component.html
+++ b/src/app/screens/expert/expert.component.html
@@ -1,14 +1,16 @@
-<div class="container" fxFlex fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5%">
+<div class="container" fxFlex fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="1%">
 
-  <div fxFlex="25" fxFlexOffset="1%">
-    <div fxFlex="20">
+  <div fxFlex fxLayout="row" fxLayoutAlign="space-around center">
+    <img alt="BeInMedia" class="responsive" src="assets/unnamed.png">
+  </div>
+
+  <div fxFlex="15">
       <a routerLink="/experts">
         <button mat-button>
           <mat-icon>arrow_back</mat-icon>
           Back to experts
         </button>
       </a>
-    </div>
   </div>
 
 
